# gd32h7xx-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32H757V_START/: gd32h757v_start.c  gd32h757v_start.h
Drivers/GD32H7xx_standard_peripheral/Source/: gd32h7xx_misc.c
Drivers/GD32H7xx_usbhs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32H7xx_usbhs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32H7xx_usbhs_library/ustd/common/: usb_ch9_std.h
Projects/GD32H757J_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32H757J_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32H757J_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32H757J_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32H757J_START/04_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757J_START/05_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757J_START/05_TIMER_Key_EXTI/Drivers/BSP/GD32H757J_START/: CMakeLists.txt
Projects/GD32H757J_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32H757J_START/06_USB_MSC_Device/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757J_START/06_USB_MSC_Device/cmake/: project.cmake
Projects/GD32H757J_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32H757J_START/07_USB_MSC_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757J_START/07_USB_MSC_Host/Drivers/GD32H7xx_usbhs_library/: CMakeLists.txt
Projects/GD32H757V_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32H757V_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32H757V_START/01_GPIO_Running_LED/cmake/: project.cmake
Projects/GD32H757V_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757V_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32H757V_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32H757V_START/: CMakeLists.txt
Projects/GD32H757V_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32H757V_START/05_TIMER_Key_EXTI/: gd32h7xx_flash.ld
Projects/GD32H757V_START/05_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757V_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32H757V_START/06_USB_MSC_Device/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757V_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32H757V_START/07_USB_MSC_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757Z_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32H757Z_START/01_GPIO_Running_LED/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757Z_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32H757Z_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32H757Z_START/04_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757Z_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32H757Z_START/: CMakeLists.txt
Projects/GD32H757Z_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32H757Z_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32H757Z_START/06_USB_MSC_Device/Application/: CMakeLists.txt  readme.txt
Projects/GD32H757Z_START/06_USB_MSC_Device/Drivers/GD32H7xx_usbhs_library/: CMakeLists.txt
Projects/GD32H757Z_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32H757Z_START/07_USB_MSC_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32H759I_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32H759I_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32H759I_EVAL/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32H759I_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32H759I_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32H759I_EVAL/04_USART_Printf/Drivers/GD32H7xx_standard_peripheral/: CMakeLists.txt
Projects/GD32H759I_EVAL/05_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32H759I_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32H759I_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32H759I_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: readme.txt
Projects/GD32H759I_EVAL/09_ADC0_ADC1_Regular_Parallel_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32H759I_EVAL/10_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32H759I_EVAL/11_I2C_EEPROM/: gd32h7xx_flash.ld
Projects/GD32H759I_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32H759I_EVAL/14_SPI_Quad_LCD/Drivers/BSP/GD32H759I_EVAL/: CMakeLists.txt
Projects/GD32H759I_EVAL/26_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32H759I_EVAL/26_ENET_FreeRTOS_tcpudp/Middlewares/FreeRTOS/: CMakeLists.txt
Projects/GD32H759I_EVAL/26_ENET_FreeRTOS_tcpudp/Middlewares/lwip/: CMakeLists.txt
Projects/GD32H759I_EVAL/26_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32H759I_EVAL/26_ENET_Raw_tcpudp/Application/: CMakeLists.txt  readme.txt
Projects/GD32H759I_EVAL/26_ENET_Raw_tcpudp/Application/Core/Inc/: gd32h7xx_enet_eval.h  gd32h7xx_it.h  hello_gigadevice.h  main.h  netconf.h  tcp_client.h  udp_echo.h
Projects/GD32H759I_EVAL/26_ENET_Raw_tcpudp/Application/Core/Src/: gd32h7xx_enet_eval.c  gd32h7xx_it.c  hello_gigadevice.c  main.c  netconf.c  tcp_client.c  udp_echo.c
Projects/GD32H759I_EVAL/27_USB_Device_CDC_ACM/Drivers/GD32H7xx_usbhs_library/: CMakeLists.txt
Projects/GD32H759I_EVAL/28_USB_Host_HID/: CMakeLists.txt
Projects/GD32H759I_EVAL/28_USB_Host_HID/Drivers/GD32H7xx_usbhs_library/: CMakeLists.txt
Projects/GD32H759I_EVAL/28_USB_Host_MSC/: CMakeLists.txt
Projects/GD32H759I_START/01_GPIO_Running_LED/Drivers/BSP/GD32H759I_START/: CMakeLists.txt
Projects/GD32H759I_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32H759I_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32H759I_START/07_USB_MSC_Host/: CMakeLists.txt
(+386 files in other folders)
